--- a/data/constructions/indefinite-001.yaml
+++ b/data/constructions/indefinite-001.yaml
@@ -1,6 +1,7 @@
 id: indefinite-001
 name: Indefinite Construction
 pattern: Indefinite determiner + Nominal | Existential quantifier + Nominal | Bare NP
+type: semantic
 meanings:
   '1':
     definition: Non-identifiable entity
@@ -10,8 +11,6 @@ meanings:
         note: Novel referent
       - form: some students
         note: Non-specific set
-    relations:
-      - 1
   '2':
     definition: New discourse entity
     details: Entity being introduced to discourse
@@ -20,8 +19,6 @@ meanings:
         note: First mention
       - form: some people say...
         note: Discourse-new source
-    relations:
-      - 2
   '3':
     definition: Arbitrary instance
     details: Any satisfying instance of type
@@ -30,8 +27,6 @@ meanings:
         note: Any card
       - form: some help
         note: Any assistance
-    relations:
-      - 3
   '4':
     definition: Type membership
     details: Instance of category
@@ -40,5 +35,8 @@ meanings:
         note: Category instance
       - form: is some kind of expert
         note: Category type
-    relations:
-      - 4
+semanticRefs:
+  - indefiniteness
+  - familiarity
+  - variable
+  - category
