--- a/data/constructions/np-proper-001.yaml
+++ b/data/constructions/np-proper-001.yaml
@@ -1,6 +1,7 @@
 id: np-proper-001
 name: Proper Noun Phrase
 pattern: NP[Head:ProperName]
+type: syntactic
 meanings:
   '1':
     definition: NP headed by a proper name identifying a unique entity
@@ -12,5 +13,6 @@ meanings:
 relatedConstructions:
   - id: np-001
     relationship: inherits-from
-  - id: np-proper-name-001
-    relationship: related-to
+  - id: proper-name-001
+    relationship: implements
+    notes: Realizes the proper name function
