--- a/data/constructions/numerative-complex-001.yaml
+++ b/data/constructions/numerative-complex-001.yaml
@@ -1,6 +1,7 @@
 id: numerative-complex-001
 name: Complex Numerative (Phrasal >99)
 pattern: "[factor + magnitude] (+ addition)"
+type: syntactic
 meanings:
   '1':
     definition: Phrasal numeratives above the lexical 0–99 range, built from magnitude phrases with optional additions
