--- a/data/constructions/numerative-magnitude-head-001.yaml
+++ b/data/constructions/numerative-magnitude-head-001.yaml
@@ -1,6 +1,7 @@
 id: numerative-magnitude-head-001
 name: Magnitude Head Numerative
 pattern: "Det[magnitude] (+ of + NP)"
+type: syntactic
 meanings:
   '1':
     definition: Denotes a base magnitude (hundred, thousand, million, etc.) that can scale a quantity
