--- a/data/constructions/past-tense-ed-001.yaml
+++ b/data/constructions/past-tense-ed-001.yaml
@@ -1,6 +1,7 @@
 id: past-tense-ed-001
 name: Past Tense -ed
 pattern: Verb stem + -ed/-d/-t (including allomorphs /d/, /t/, /ɪd/)
+type: morphological
 meanings:
   '1':
     definition: Marks temporal/modal/social distance
@@ -12,9 +13,6 @@ meanings:
         note: Modal displacement
       - form: I wanted to ask you
         note: Social displacement
-    relations:
-      - 1
-      - 2
   '2':
     definition: Temporal anteriority
     details: Marks situation as occurring before reference time (but see cases like sports commentary where this breaks down)
@@ -23,9 +21,6 @@ meanings:
         note: Clear anterior time
       - form: Jones passed to Smith!
         note: Immediate past challenging pure anteriority
-    relations:
-      - 1
-      - 3
   '3':
     definition: Non-actual/hypothetical marking
     details: Indicates displacement from actual/current reality
@@ -34,9 +29,6 @@ meanings:
         note: Counterfactual condition
       - form: I wish I lived there
         note: Contrary-to-fact desire
-    relations:
-      - 1
-      - 4
   '4':
     definition: Social distancing marker
     details: Creates interpersonal distance, often for politeness
@@ -45,23 +37,8 @@ meanings:
         note: Polite offer
       - form: I hoped we could talk
         note: Tentative approach
-    relations:
-      - 1
-      - 4
-relations:
-  '1':
-    construction: tense-marking-001
-    type: implements
-    notes: 'Original type: instantiates.'
-  '2':
-    construction: temporal-relation-001
-    type: related-to
-    notes: 'Original type: expresses.'
-  '3':
-    construction: irrealis-001
-    type: related-to
-    notes: 'Original type: participates-in.'
-  '4':
-    construction: politeness-001
-    type: related-to
-    notes: 'Original type: contributes-to.'
+semanticRefs:
+  - tense
+  - temporal-relation
+  - irrealis
+  - politeness
