--- a/data/constructions/cardinal-determinative-001.yaml
+++ b/data/constructions/cardinal-determinative-001.yaml
@@ -1,6 +1,7 @@
 id: cardinal-determinative-001
 name: Cardinal Determinative
 pattern: "Det[cardinal]"
+type: syntactic
 meanings:
   '1':
     definition: Cardinal numerative used in determiner function to specify exact quantity
