--- a/data/constructions/cardinal-noun-001.yaml
+++ b/data/constructions/cardinal-noun-001.yaml
@@ -1,6 +1,7 @@
 id: cardinal-noun-001
 name: Cardinal Noun
 pattern: "N[cardinal]"
+type: syntactic
 meanings:
   '1':
     definition: Cardinal numerative used as a noun to denote a number entity or quantity concept
