--- a/data/constructions/definite-001.yaml
+++ b/data/constructions/definite-001.yaml
@@ -1,6 +1,7 @@
 id: definite-001
 name: Definite Construction
 pattern: Definite determiner + Nominal | Proper name | Personal pronoun | Universal quantifier + Nominal
+type: semantic
 meanings:
   '1':
     definition: Identifiable referent
@@ -10,8 +11,6 @@ meanings:
         note: Previously mentioned/contextually unique
       - form: John
         note: Inherently identifiable
-    relations:
-      - 1
   '2':
     definition: Unique/maximal entity
     details: Entity or set exhausting relevant context
@@ -20,8 +19,6 @@ meanings:
         note: Satisfies unique description
       - form: every book
         note: Complete set
-    relations:
-      - 2
   '3':
     definition: Kind/type
     details: Category-level reference
@@ -30,8 +27,6 @@ meanings:
         note: Species
       - form: all cats
         note: Category
-    relations:
-      - 3
   '4':
     definition: Familiar entity
     details: Established in discourse/knowledge
@@ -40,5 +35,8 @@ meanings:
         note: Culturally established
       - form: that same dog
         note: Discourse established
-    relations:
-      - 4
+semanticRefs:
+  - identifiability
+  - uniqueness
+  - kind
+  - familiarity
