--- a/data/constructions/independent-genitive-pronoun-001.yaml
+++ b/data/constructions/independent-genitive-pronoun-001.yaml
@@ -12,9 +12,6 @@ meanings:
         note: Institutional control
       - form: Whose is this?
         note: Questioning possession
-    relations:
-      - 1
-      - 2
   '2':
     definition: Marks intrinsic relationship/part-whole
     details: Indicates inherent connection rather than ownership
@@ -23,10 +20,6 @@ meanings:
         note: Parts of your tree
       - form: The theme is theirs
         note: Component of their work
-    relations:
-      - 1
-      - 3
-      - 4
   '3':
     definition: Indicates creation/authorship
     details: Marks the creator or source
@@ -35,9 +28,6 @@ meanings:
         note: She created them
       - form: This theory is ours
         note: We developed it
-    relations:
-      - 1
-      - 6
   '4':
     definition: Expresses time/duration relationship
     details: Marks temporal measurement or occurrence
@@ -46,9 +36,6 @@ meanings:
         note: In your time slot
       - form: These tasks are theirs
         note: Assigned to their period
-    relations:
-      - 1
-      - 5
   '5':
     definition: Indicates characteristic or property
     details: Marks defining features or qualities
@@ -57,10 +44,6 @@ meanings:
         note: Property of it
       - form: Those weaknesses are theirs
         note: Their characteristics
-    relations:
-      - 1
-      - 2
-      - 4
   '6':
     definition: Marks subject-like relationship
     details: Indicates the doer/experiencer of an action/state
@@ -69,10 +52,6 @@ meanings:
         note: She is the one laughing
       - form: The decision was yours
         note: You decided
-    relations:
-      - 1
-      - 4
-      - 6
   '7':
     definition: Expresses social/institutional relationship
     details: Marks organizational or relational connections
@@ -81,36 +60,15 @@ meanings:
         note: Coaches our team
       - form: These employees are yours
         note: Work for you
-    relations:
-      - 1
-      - 2
-      - 7
 relations:
   '1':
     construction: np-001
-    type: related-to
+    type: can-manifest-as
     notes: 'Original type: functions-as.'
-  '2':
-    construction: property-of-001
-    type: implements
-    notes: 'Original type: instantiates.'
-  '3':
-    construction: part-whole-001
-    type: implements
-    notes: 'Original type: instantiates.'
-  '4':
-    construction: nominalization-001
-    type: related-to
-    notes: 'Original type: interacts-with.'
-  '5':
-    construction: measure-phrase-001
-    type: related-to
-    notes: 'Original type: can-form.'
-  '6':
-    construction: agent-of-001
-    type: related-to
-    notes: 'Original type: can-express.'
-  '7':
-    construction: social-role-001
-    type: implements
-    notes: 'Original type: instantiates.'
+semanticRefs:
+  - property
+  - part-whole
+  - nominalization
+  - measure
+  - agent
+  - social-role
