--- a/data/constructions/interrogative-word-001.yaml
+++ b/data/constructions/interrogative-word-001.yaml
@@ -12,7 +12,6 @@ meanings:
         note: Seeks agent identification
     relations:
       - 1
-      - 2
   '2':
     definition: Creates open variable in proposition
     details: Marks an unspecified element while constraining its type
@@ -23,7 +22,6 @@ meanings:
         note: Unspecified possessor
     relations:
       - 1
-      - 3
   '3':
     definition: Marks scalar degree
     details: Indicates point or extent on implicit or explicit scale
@@ -45,25 +43,16 @@ meanings:
         note: Remarkable speed
     relations:
       - 1
-      - 5
 relations:
   '1':
     construction: np-001
-    type: related-to
+    type: can-manifest-as
     notes: 'Original type: functions-as.'
-  '2':
-    construction: question-clause-001
-    type: related-to
-    notes: 'Original type: can-form.'
-  '3':
-    construction: variable-001
-    type: related-to
-    notes: 'Original type: creates.'
   '4':
     construction: degree-001
-    type: related-to
+    type: can-manifest-as
     notes: 'Original type: can-express.'
-  '5':
-    construction: evaluative-001
-    type: related-to
-    notes: 'Original type: enables.'
+semanticRefs:
+  - question-clause
+  - variable
+  - evaluation
