--- a/data/constructions/nom-001.yaml
+++ b/data/constructions/nom-001.yaml
@@ -1,6 +1,6 @@
 id: nom-001
 name: Nominal Construction
-pattern: Optional modifiers + Required head (N-001 + {singular-001 | plural-001}) + Optional post modifiers/complements
+pattern: Optional modifiers + Required head (n-common-001 + {singular-001 | plural-001}) + Optional post modifiers/complements
 meanings:
   '1':
     definition: Specifies/restricts feature bundles
@@ -22,3 +22,20 @@ meanings:
         note: Elaborates contents of the knowledge
     relations:
       - 2
+relations:
+  '1':
+    construction: nom-premod-000
+    type: can-contain
+    notes: Pre-head modifiers
+  '2':
+    construction: n-common-001
+    type: can-contain
+    notes: Head noun
+  '3':
+    construction: singular-001
+    type: can-contain
+    notes: Number marking
+  '4':
+    construction: plural-001
+    type: can-contain
+    notes: Number marking
