--- a/data/constructions/np-indef-001.yaml
+++ b/data/constructions/np-indef-001.yaml
@@ -13,7 +13,6 @@ meanings:
     relations:
       - 1
       - 2
-      - 4
   '2':
     definition: Refers to/predicates partial set
     details: Refers to or predicates property of some subset of nominal's type
@@ -25,7 +24,6 @@ meanings:
     relations:
       - 1
       - 2
-      - 3
   '3':
     definition: Refers to/predicates arbitrary role
     details: Refers to or predicates property of any role instance
@@ -37,7 +35,6 @@ meanings:
     relations:
       - 1
       - 2
-      - 4
   '4':
     definition: Refers to/predicates subkind
     details: Refers to or predicates property of type subset
@@ -48,9 +45,6 @@ meanings:
         note: Predicates subtype
     relations:
       - 1
-      - 3
-      - 4
-      - 5
   '5':
     definition: Refers to/predicates characteristic property
     details: Refers to or predicates property as typical possibility
@@ -61,8 +55,6 @@ meanings:
         note: Predicates typical property
     relations:
       - 1
-      - 4
-      - 5
   '6':
     definition: Refers to/predicates existence
     details: Refers to or predicates existence of instance(s) of nominal's type
@@ -74,7 +66,6 @@ meanings:
     relations:
       - 1
       - 2
-      - 4
   '7':
     definition: Refers to/predicates taxonomic type
     details: Refers to or predicates membership in taxonomic category
@@ -85,23 +76,16 @@ meanings:
         note: Predicates taxonomic status
     relations:
       - 1
-      - 4
-      - 5
 relations:
   '1':
-    construction: grammatical-definiteness-001.2
+    construction: grammatical-definiteness-001
     type: implements
+    notes: Implements meaning 2
   '2':
-    construction: indefinite-001.1
+    construction: indefinite-001
     type: related-to
-    notes: 'Original type: elaborates.'
-  '3':
-    construction: quantifier-001
-    type: implements
-  '4':
-    construction: predication-001
-    type: related-to
-    notes: 'Original type: enables.'
-  '5':
-    construction: kind-001
-    type: implements
+    notes: 'Original type: elaborates. Related to meaning 1.'
+semanticRefs:
+  - quantifier
+  - predication
+  - kind
