--- a/data/constructions/numerative-single-digit-001.yaml
+++ b/data/constructions/numerative-single-digit-001.yaml
@@ -1,6 +1,7 @@
 id: numerative-single-digit-001
 name: Single-digit Numerative
-pattern: "Det[single-digit]"
+pattern: "0, 1, 2, 3, 4, 5, 6, 7, 8, 9"
+type: syntactic
 meanings:
   '1':
     definition: Specifies a cardinality from one to nine
