--- a/data/constructions/numerative-teen-irregular-001.yaml
+++ b/data/constructions/numerative-teen-irregular-001.yaml
@@ -1,6 +1,7 @@
 id: numerative-teen-irregular-001
 name: Irregular Teen Numerative (eleven/twelve)
-pattern: "Det[irregular-teen]"
+pattern: Irregular teen forms (10, 11, 12, 13, 15)
+type: morphological
 meanings:
   '1':
     definition: Suppletive teen numeratives for 11 and 12
