--- a/data/constructions/plural-001.yaml
+++ b/data/constructions/plural-001.yaml
@@ -1,6 +1,6 @@
 id: plural-001
 name: Plural Construction
-pattern: Applies to nouns, pronouns, determinsyobrds, and proper names
+pattern: Applies to nouns, pronouns, determinatives, and proper names
 meanings:
   '1':
     implements: grammatical-number-001.1
@@ -43,3 +43,16 @@ meanings:
         note: Recurring instances
     relations:
       - 1
+relations:
+  '1':
+    construction: grammatical-number-001
+    type: implements
+    notes: Core number system
+  '2':
+    construction: n-common-001
+    type: related-to
+    notes: Standard domain (common nouns)
+  '3':
+    construction: n-proper-001
+    type: related-to
+    notes: Extension to proper nouns
